--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-  "/js/app.js": "/js/app.js",
-  "/css/app.css": "/css/app.css"
+  "/js/app.js": "/js/app.35f4e1715955a846e9d8.js",
+  "/css/app.css": "/css/app.eb4831997e8a3ba40d89.css"
 }
